--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block 'cabecalho' %}
+    <link rel="stylesheet" href="{% static 'usuarios/css/cadastro.css'%}">
+{% endblock %}
+
 {% block 'conteudo' %}
     <div class="bg1">
         <div class="container">
@@ -6,10 +12,10 @@
                 <div class="col-md">
                     <div class="box-titulo">
                         <div class="box-titulo-item">
-                            <img src="">
+                            <img src="{% static 'usuarios/img/myPet.png' %}">
                         </div>
                         <div style="margin-top: auto; margin-bottom: auto;" class="box-titulo-item">
-                            <h3 >Mypet</h3>
+                            <h3>Mypet</h3>
                         </div>
                     </div>
                     <hr class="divisor">
