--- a/templates/static/geral/css/base.css
+++ b/templates/static/geral/css/base.css
@@ -15,3 +15,40 @@ body{
     align-items: center;
     background-color: #0c0ce94d;
 }
+/*-------------------------*/
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.logo{
+    height: 200px;
+    width: 500px;
+}
+.divisor{
+    border: 1px;
+    height: 1px;
+    color: black;
+    display: block;
+}
+.titulo{
+    font-family: 'Apple Chancery', cursive;
+    font-style: italic;
+    font-size: 35px;
+}
+.texto{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+.botao{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 10px;
+    border: 2px solid #000000;
+}
