--- a/usuarios/templates/logar.html
+++ b/usuarios/templates/logar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'home/css/home.css'%}">
+    <link rel="stylesheet" href="{% static 'usuarios/css/cadastrar.css'%}">
 {% endblock %}
 {% block 'conteudo' %}
     <div class="container">
@@ -9,7 +9,7 @@
             <img src="{% static 'home/img/myPet.png' %}" class="logo">
         </figure>
         <br>
-        <h1 class="titulo">Feito para quem ama os animais</h1>
+        <h1 class="titulo">Bem vindo(a): </h1>
         <br><br><br><br>
         <form class="texto" action="{% url 'entrar' %}" method="POST">{% csrf_token %}
             <input class="texto" type="login" name="login" id="" placeholder="Entre com o seu login" required autofocus>
