--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,27 +1,21 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block 'cabecalho' %}
     <link rel="stylesheet" href="{% static 'home/css/home.css'%}">
 {% endblock %}
-
 {% block 'conteudo' %}
     <div class="container">
-        <div class="logo">
-            <figure>
-                <img id="myPet" src="./uploads/myPet.png" height="100" width="250">
-            </figure>
-        </div>
+        <figure>
+            <img src="{% static 'home/img/myPet.png' %}" class="logo">
+        </figure>
+        <br>
+        <h1 class="titulo">Feito para quem ama os animais</h1>
+        <br><br><br><br>
 
-        <h2>Feito para quem ama os animais</h2>
-
-        <form action="/verificar_celular" method="post" id="celularForm">
-            <label for="celular">Celular: </label>
-            <input type="celular" id="celular" name="celular" placeholder="Digite aqui o seu celular" required autofocus oninput="this.value = this.value.replace(/[^0-9]/g, '');">
-        </form><br>
-
-        <button id="entrar">Entrar</button>
-
+        <form action="{% url 'entrar' %}" method="POST">{% csrf_token %}
+            <input class="texto" type="celular" name="celular" id="" placeholder="Digite aqui o seu celular" required autofocus oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+        </form>
+        <button class="botao" id="entrar">Entrar</button>
         <script>
             entrar.addEventListener('click', () => {
                 if (celular.value !== '') {
@@ -34,6 +28,6 @@
                 document.getElementById("celularForm").submit()
             }
         </script>
-    </body>
-</html>
+
+    </div>
 {% endblock 'conteudo' %}
