--- a/templates/static/home/css/home.css
+++ b/templates/static/home/css/home.css
@@ -1,5 +1,36 @@
-.logo{
-    background-color: rgb(185, 0, 0);
+.container{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+}
+.logo{
+    height: 200px;
+    width: 500px;
+}
+.divisor{
+    border: 1px;
+    height: 1px;
+    color: black;
+    display: block;
+}
+.titulo{
+    font-family: 'Apple Chancery', cursive;
+    font-style: italic;
+    font-size: 35px;
+}
+.texto{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+.botao{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 10px;
+    padding: 10px;
+    border: 2px solid #000000;
 }
