--- a/home/templates/termos.html
+++ b/home/templates/termos.html
@@ -1,23 +1,33 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'home/css/home.css'%}">
+    <link rel="stylesheet" href="{% static 'home/css/termos.css'%}">
 {% endblock %}
 {% block 'conteudo' %}
     <div class="container">
-        <h3>Usuario: {{usuario}}</h3>
+        <h3 class="titulo">Usuário: {{usuario}}</h3>
+        <br>
         <h2 class='texto'>Para prosseguir com o cadastro na plataforma<br>
             É preciso que você leia os termos de uso com atenção<br>
             Se concordar marque o checkbox e prossiga</h2>
         <br>
         <br>
-        <p class='titulo'>Termos de uso: <a href="https://policies.tinder.com/terms/intl/pt/?lang=pt" target="_blank">Abrir os termos</a></p>
-        <br><br><br><br>
-        <form class="texto" action="{% url 'concordar' %}" method="POST">{% csrf_token %}
-            <label><input type="checkbox" name="checkTermos" id=""> Concordo com os termos!</label>
-            <br><br>
-            <button class="botao" type="button" onclick="goHome()">Voltar</button>
-            <input class="botao" type="submit" value="Prosseguir"></button>
+        <p class='texto'>Termos de uso: <a href="https://policies.tinder.com/safety-and-policy/intl/pt/?lang=pt" target="_blank">Abrir os termos</a></p>
+        <br><br>
+        <form class="titulo" action="{% url 'concordar' %}" method="POST">{% csrf_token %}
+            <div class="check-container">
+                <div>
+                    <input class="checkbox" type="checkbox" name="checkTermos" id="">
+                </div>
+                <div>
+                    <label>Concordo com os termos!</label>
+                </div>
+            </div>
+            <br>
+            <div class="botoes-container">
+                <button class="botao" type="button" onclick="goHome()">Voltar</button>
+                <input class="botao" type="submit" value="Prosseguir">
+            </div>
             <br><br>
         </form>
         <script>
