--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,7 +11,7 @@
         <br>
         <h1 class="titulo">Feito para quem ama os animais</h1>
         <br><br><br><br>
-        <form class="texto" action="{% url 'entrar' %}" method="POST">{% csrf_token %}
+        <form class="texto" action="{% url 'validar_login' %}" method="POST">{% csrf_token %}
             <input class="texto" type="login" name="login" id="" placeholder="Entre com o seu login" required autofocus>
             <br><br>
             <input class="botao" type="submit" value="Entrar">
