--- a/templates/static/home/css/termos.css
+++ b/templates/static/home/css/termos.css
@@ -11,7 +11,7 @@
     height: 50px;
     width: 50px;
     transform: scale(1);
-    margin-right: 10px;
+    margin-left: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 .botoes-container {
