--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,6 +11,13 @@
         <br>
         <h1 class="titulo">Feito para quem ama os animais</h1>
         <br><br><br><br>
+        {% if messages %}
+            {% for message in messages %}
+                <section class="alert {{message.tags}}">
+                    {{message}}
+                </section>
+            {% endfor %}
+        {% endif %}
         <form class="texto" action="{% url 'validar_login' %}" method="POST">{% csrf_token %}
             <input class="texto" type="login" name="login" id="" placeholder="Entre com o seu login" required autofocus>
             <br><br>
