--- a/usuarios/templates/logar.html
+++ b/usuarios/templates/logar.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'usuarios/css/cadastrar.css'%}">
+    <link rel="stylesheet" href="{% static 'usuarios/css/logar.css'%}">
 {% endblock %}
+
 {% block 'conteudo' %}
     <div class="container">
         <figure>
