--- a/perfil/templates/tutor.html
+++ b/perfil/templates/tutor.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'usuarios/css/tutor.css'%}">
+    <link rel="stylesheet" href="{% static 'perfil/css/tutor.css'%}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 {% endblock %}
 
@@ -26,7 +26,7 @@
         <form class="texto" action="{% url 'cadastrar_tutor' %}" method="POST">{% csrf_token %}
             <input type="hidden" name="usuario" value="{{usuario}}">
 
-            <h2 class='texto'>Nome do Tutor(a)</h2>
+            <h2 class='texto'>Nome do(a) Tutor(a)</h2>
             <input class="texto" type="texto" name="tutor" id="" placeholder="Nome Completo" required autofocus>
             <br><br>
 
@@ -34,9 +34,12 @@
             <input class="texto" type="tel" name="celular" id="" placeholder="DDD + 12345 - 6789" maxlength="12" pattern="[0-9]{1,12}" required>
             <br><br>
 
-            <h2 class='texto'>Agora repita sua nova senha abaixo</h2>
-            <input class="texto" type="password" name="confirmar_senha" id="" placeholder="Repita sua nova senha!" required>
-            <br><br>
+            <div>
+                <label></label>
+                <select class="" name="">
+                    <option value=""></option>
+                </select>
+            </div>
 
             <div class="botoes-container">
                 <input class="botao" type="button" onclick="window.location.href = '{% url "home" %}'" value="Cancelar">
