home-ajustado.middleware-descoberto

--- a/usuarios/templates/logar.html
+++ b/usuarios/templates/logar.html
@@ -31,4 +31,5 @@
         </form>
         
     </div>
+    <!-- <script src="{% static 'usuarios/js/logar.js' %}"></script> -->
 {% endblock 'conteudo' %}
