--- a/templates/static/geral/css/base.css
+++ b/templates/static/geral/css/base.css
@@ -8,23 +8,16 @@
     --differential-color: #58fcd5;
 }
 body{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0c0ce94d;
+    background-color: #00a8f3;
 }
-/*-------------------------*/
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.logo{
-    height: 200px;
-    width: 500px;
+.slogan {
+    font-family: 'Great Vibes', cursive;
+    font-style: normal;
+    font-size: 40px;
+    color: #00a8f3;
+    text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
+    -webkit-text-stroke: 1px #000000;
+    margin-bottom: 30px;
 }
 .divisor{
     border: 1px;
