--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -14,8 +14,8 @@
                     </section>
                 {% endfor %}
             {% endif %}
-            <form class="texto" action="{% url 'validar_login' %}" method="POST">{% csrf_token %}
-                <input class="texto" type="login" name="login" id="" placeholder="Entre com o seu login" required autofocus>
+            <form class="input-group" action="{% url 'validar_login' %}" method="POST">{% csrf_token %}
+                <input class="texto" type="text" name="login" id="login" placeholder="Entre com o seu login" required autofocus>
                 <input class="botao" type="submit" value="Entrar">
             </form>
         </div>
