--- a/home/templates/termos.html
+++ b/home/templates/termos.html
@@ -3,46 +3,37 @@
 {% block 'cabecalho' %}
     <link rel="stylesheet" href="{% static 'home/css/termos.css'%}">
 {% endblock %}
-
 {% block 'conteudo' %}
-    <div class="container">
-        <h3 class="titulo">Bem vindo(a): {{usuario}}</h3>
-        <br>
-
-        <h2 class='texto'>Para prosseguir com o seu cadastro na plataforma<br>
-            É preciso que leia os termos de uso com atenção<br>
-            Caso concorde, marque o checkbox e click em concordei</h2>
-        <br>
-        <br>
-
-        <p class='texto'>Termos de uso: <a href="https://policies.tinder.com/safety-and-policy/intl/pt/?lang=pt" target="_blank">Ler os termos</a></p>
-        <br><br>
-
-        <form class="titulo" action="{% url 'checar_termos' %}" method="POST">{% csrf_token %}
-            <input type="hidden" name="usuario" value="{{usuario}}">
-            <div class="check-container">
-                <div>
-                    <label>Eu li e chequei os termos!</label>
+    <body class='body'>
+        <div class="container">
+            <h3 class="slogan">Bem vindo(a): {{usuario}}</h3>
+            <h2 class='texto'>Para prosseguir com o seu cadastro na plataforma<br>
+                É preciso que leia os termos de uso com atenção<br>
+                Caso concorde, marque o checkbox e click em concordei</h2>
+            <p class='texto'>Termos de uso: <a href="https://policies.tinder.com/safety-and-policy/intl/pt/?lang=pt" target="_blank">Ler os termos</a></p>
+            <form class="titulo" action="{% url 'checar_termos' %}" method="POST">{% csrf_token %}
+                <input type="hidden" name="usuario" value="{{usuario}}">
+                <div class="check-container">
+                    <div>
+                        <label>Eu li e chequei os termos!</label>
+                    </div>
+                    <div>
+                        <input class="checkbox" type="checkbox" name="checkTermos" id="">
+                    </div>
+                </div>         
+                <div class="botoes-container">
+                    <input class="botao" type="button" onclick="window.location.href = '{% url "home" %}'" value="Voltar">
+                    <input class="botao" type="submit" value="Concordei">
                 </div>
-                <div>
-                    <input class="checkbox" type="checkbox" name="checkTermos" id="">
-                </div>
-            </div>
-            <br>           
-            <div class="botoes-container">
-                <input class="botao" type="button" onclick="window.location.href = '{% url "home" %}'" value="Voltar">
-                <input class="botao" type="submit" value="Concordei">
-            </div>
-            <br><br>
-        </form>
-
-        {% if messages %}
-            {% for message in messages %}
-                <section class="alert {{message.tags}}">
-                    {{message}}
-                </section>
-            {% endfor %}
-        {% endif %}
-        
-    </div>
+                <br><br>
+            </form>
+            {% if messages %}
+                {% for message in messages %}
+                    <section class="alert {{message.tags}}">
+                        {{message}}
+                    </section>
+                {% endfor %}
+            {% endif %}
+        </div>
+    </body>
 {% endblock 'conteudo' %}
