--- a/templates/static/home/css/home.css
+++ b/templates/static/home/css/home.css
@@ -1,38 +1,102 @@
 .body{
     background-color: #00a8f3; /* Define a cor de fundo do body */
     background-image: url("/static/home/img/background.png");
-    background-repeat: no-repeat; /* Define que a imagem de fundo será exibida apenas uma vez. */
-    background-position: center center; /* A imagem de fundo será centralizada horizontal e verticalmente */
-    background-size: contain; /* Escala a imagem de fundo para caber no container, mantendo a proporção */
-    background-attachment: fixed; /* Fixa a imagem de fundo na tela, independentemente do scroll */
-    display: flex; /* Define que os itens sejam centralizados horizontal e verticalmente */
-    justify-content: center; /* Alinha os itens no centro horizontalmente */
-    align-items: center; /* Alinha os itens no centro verticalmente */
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain; /* Make the background contain within the container */
+    background-attachment: fixed; /* Keep the background fixed in place when scrolling */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container {
-    width: 100%; /* Define a largura do container como 100% da tela */
-    height: 100%; /* Define a altura do container como 100% da tela */
-    display: flex;  /* Define o container como um container flex */
-    flex-direction: column; /* Define o container como um container flex com direção coluna */
-    align-items: center; /* Alinha os itens no centro horizontalmente */
-    justify-content: flex-end; /* Alinha os elementos no final do container */
-    padding: 0 0px; /* Remove o padding esquerdo e direito do container */
-    margin-top: -70px; /* Adiciona um margin negativo no topo do container para mover para cima e centralizar verticalmente na tela */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end; /* Align the elements to the bottom of the container */
+    padding: 0 0px;
+    margin-top: -200px; /* Add negative margin to move the container up */
 }
-.texto {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-    width: 300px;
+.slogan {
+    font-family: 'Great Vibes', cursive;
+    font-style: normal;
+    font-size: 40px;
+    color: #00a8f3;
+    text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
+    -webkit-text-stroke: 1px #000000;
+    margin-bottom: 30px;
 }
-.botao {
-    font-family: Arial, Helvetica, sans-serif;
+.input-group {
+    /* Define a largura do formulário como 100% da largura disponível */
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+
+    /* Adiciona uma borda em volta do formulário */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+
+    /* Adiciona uma sombra embaixo do formulário */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.input-group .texto {
+    /* Define a fonte do input como "Montserrat", Arial, Helvetica, sans-serif, tamanho 18px, alinhamento centralizado, com padding de 10px em todas as direções */
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     text-align: center;
-    font-weight: bold;
     font-size: 18px;
-    border-radius: 10px;
     padding: 10px;
-    border: 2px solid #000000;
-    margin-top: 20px;
+
+    /* Adiciona um border-radius de 5px para arredondar as bordas do input */
+    border-radius: 5px;
+
+    /* Adiciona uma cor de fundo leve ao input para destacá-lo */
+    background-color: rgb(255, 255, 255);
+    border: none;
+
+    /* Adiciona uma sombra embaixo do input */
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+
+    /* Define a largura do input como 100% da largura disponível */
+    width: 100%;
+
+    /* Adiciona uma margem inferior de 10px para separar os inputs */
+    margin-bottom: 10px;
+}
+
+.input-group .botao {
+    /* Define a fonte do botão como "Montserrat", Arial, Helvetica, sans-serif, tamanho 18px, alinhamento centralizado, com padding de 10px em todas as direções */
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
+
+    /* Define a cor de fundo do botão como #00a8f3 */
+    background-color: #00a8f3;
+
+    /* Adiciona um border-radius de 5px para arredondar as bordas do botão */
+    border-radius: 5px;
+
+    /* Define a cor da fonte do botão como branco */
+    color: #fff;
+
+    /* Adiciona uma sombra embaixo do botão */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+
+    /* Adiciona um efeito de transição ao passar o mouse em cima do botão */
+    transition: background-color 0.3s ease;
+
+    /* Define a largura do botão como 100% da largura disponível */
+    width: 100%;
+
+    /* Remove a margem inferior do último input */
+    margin-bottom: 0;
+}
+
+.input-group .botao:hover {
+    /* Define a cor de fundo do botão quando o mouse passar por cima */
+    background-color: #00709b;
 }
