--- a/templates/static/home/css/termos.css
+++ b/templates/static/home/css/termos.css
@@ -35,7 +35,8 @@
     /* Define a largura do botão como 100% da largura disponível */
     width: 100%;
     /* Remove a margem inferior do último input */
-    margin-bottom: 0;
+    margin-left: 20;
+    margin-right: 20;
 }
 .botao:hover {
     /* Define a cor de fundo do botão quando o mouse passar por cima */
@@ -56,7 +57,6 @@
     display: flex;  /* Define o container como um container flex */
     flex-direction: column; /* Define o container como um container flex com direção coluna */
     align-items: center; /* Alinha os itens no centro horizontalmente */
-    justify-content: flex-end; /* Alinha os elementos no final do container */
+    justify-content: center; /* Alinha os elementos no final do container */
     padding: 0 0px; /* Remove o padding esquerdo e direito do container */
-    margin-top: -200px; /* Adiciona um margin negativo no topo do container para mover para cima e centralizar verticalmente na tela */
 }
