--- a/templates/static/usuarios/css/logar.css
+++ b/templates/static/usuarios/css/logar.css
@@ -69,7 +69,6 @@
 
 .input-group .botoes-container {
     display: flex;
-    justify-content: space-between;
     width: 100%;
 }
 
@@ -79,6 +78,8 @@
     text-align: center;
     font-size: 18px;
     padding: 10px;
+    margin-left: 1%;
+    margin-right: 1%;
 
     /* Define a cor de fundo do botão como #00a8f3 */
     background-color: #00a8f3;
