--- a/templates/static/usuarios/css/termos.css
+++ b/templates/static/usuarios/css/termos.css
@@ -43,7 +43,7 @@
     background-color: #00709b;
 }
 .body{
-    background-image: url("/static/home/img/termos.svg");
+    background-image: url("/static/usuarios/img/termos.svg");
     background-repeat: no-repeat; /* Define que a imagem de fundo será exibida apenas uma vez. */
     background-position: center center; /* A imagem de fundo será centralizada horizontal e verticalmente */
     background-size: contain; /* Escala a imagem de fundo para caber no container, mantendo a proporção */
@@ -61,4 +61,11 @@
     align-items: center; /* Alinha os itens no centro horizontalmente */
     justify-content: center; /* Alinha os elementos no final do container */
     padding: 0 0px; /* Remove o padding esquerdo e direito do container */
+}
+.link{
+    color: rgb(255, 255, 0);
+    font-size: 25px;
+    text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 1);
+    -webkit-text-stroke: 1px #000000;
+    margin-bottom: 10px;
 }
