--- a/usuarios/templates/cadastrar.html
+++ b/usuarios/templates/cadastrar.html
@@ -6,7 +6,6 @@
 {% block 'conteudo' %}
     <body class='body'>
         <div class="container">
-
             <figure>
                 <img src="{% static 'geral/img/myPet.png' %}">
             </figure>
@@ -26,7 +25,7 @@
                 <h2 class='texto'>Agora repita sua nova senha abaixo</h2>
                 <input class="texto" type="password" name="confirmar_senha" id="confirmar_senha" placeholder="Repita sua nova senha!" required>
                 <div class="botoes-container">
-                    <input class="botao" type="button" onclick="window.location.href = '{% url "home" %}'" value="Cancelar">
+                    <input class="botao" type="button" onclick="window.location.href = '{% url "/" %}'" value="Cancelar">
                     <input class="botao" type="submit" value="Registrar">
                 </div>
             </form>
