--- a/usuarios/templates/home.html
+++ b/usuarios/templates/home.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'home/css/home.css'%}">
+    <link rel="stylesheet" href="{% static 'usuarios/css/home.css'%}">
 {% endblock %}
 {% block 'conteudo' %}
     <body class="body">
         <div class="container">
-
             <h1 class="slogan">Feito para quem ama os animais</h1>
             {% if messages %}
                 {% for message in messages %}
@@ -15,11 +14,10 @@
                     </section>
                 {% endfor %}
             {% endif %}
-            <form class="input-group" action="{% url 'validar_login' %}" method="POST">{% csrf_token %}
+            <form class="input-group" action="{% url '/' %}" method="POST">{% csrf_token %}
                 <input class="texto" type="text" name="login" id="login" placeholder="Entre com o seu login" required autofocus>
                 <input class="botao" type="submit" value="Entrar">
             </form>
-            
         </div>
     </body>
 {% endblock 'conteudo' %}
