--- a/feed/templates/feed.html
+++ b/feed/templates/feed.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'perfil/css/tutor.css'%}">
+    <link rel="stylesheet" href="{% static 'feed/css/feed.css'%}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 {% endblock %}
 {% block 'conteudo' %}
