--- a/usuarios/templates/logar.html
+++ b/usuarios/templates/logar.html
@@ -4,24 +4,22 @@
     <link rel="stylesheet" href="{% static 'usuarios/css/logar.css'%}">
 {% endblock %}
 {% block 'conteudo' %}
-    <body class='body'>
-        <div class="container">
-            <h1 class="slogan">A plataforma do seu pet espera por você {{usuario}}</h1>
-            {% if messages %}
-                {% for message in messages %}
-                    <section class="alert {{message.tags}}">
-                        {{message}}
-                    </section>
-                {% endfor %}
-            {% endif %}
-            <form class="input-group" action="{% url 'logar' %}" method="POST">{% csrf_token %}
-                <input type="hidden" name="usuario" value="{{usuario}}">
-                <input class="texto" type="password" name="senha" id="" placeholder="Entre com a sua senha" required autofocus>
-                <div class="botoes-container">
-                    <input class="botao" type="button" onclick="window.location.href = '{% url "/" %}'" value="Retornar">
-                    <input class="botao" type="submit" value="Entrar">
-                </div>
-            </form>
-        </div>
-    </body>
+    <div class="container">
+        <p class="slogan">A plataforma do seu pet espera por você</p>
+        {% if messages %}
+            {% for message in messages %}
+                <section class="alert {{message.tags}}">
+                    {{message}}
+                </section>
+            {% endfor %}
+        {% endif %}
+        <form class="form" action="{% url 'logar' %}" method="POST">{% csrf_token %}
+            <input type="hidden" name="usuario" value="{{usuario}}">
+            <input class="input" type="password" name="senha" id="" placeholder="Entre com a sua senha" required autofocus>
+            <div class="botoes">
+                <input class="botao" type="button" onclick="window.location.href = '{% url "/" %}'" value="Retornar">
+                <input class="botao" type="submit" value="Entrar">
+            </div>
+        </form>
+    </div>
 {% endblock 'conteudo' %}
