--- a/templates/base.html
+++ b/templates/base.html
@@ -12,4 +12,7 @@
         {% block 'conteudo' %} {% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
+    <footer>
+        <p>Desenvolvimento: Gabriel Veronez Giolo e Wesley Ribeiro dos Santos. 6º ADS - <a href="http://site.fatecfranca.edu.br" target="_blank">Fatec Franca</a></p>
+    </footer>
 </html>
