--- a/templates/static/geral/css/base.css
+++ b/templates/static/geral/css/base.css
@@ -1,47 +1,71 @@
-:root{
-    box-sizing: border-box;
-    --main-color: #0b1526;
-    --dark-color: #000716;
-    --secondary-dark-color: rgb(15, 2, 26);
-    --light-color: #00c1f3;
-    --contrast-color: #f4c96b;
-    --differential-color: #58fcd5;
-}
 body{
-    background-color: #00a8f3;
+    background-color: #00a8f3; /* Cor de fundo da tela */
+    background-repeat: no-repeat; /* Define que a imagem de fundo será exibida apenas uma vez. */
+    background-position: center center; /* A imagem de fundo será centralizada horizontal e verticalmente */
+    background-size: contain; /* Escala a imagem de fundo para caber no container, mantendo a proporção */
+    background-attachment: fixed; /* Fixa a imagem de fundo na tela, independentemente do scroll */
+}
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column; /* alinha os elementos em coluna */
+    align-items: center; /* centraliza os elementos */
+    justify-content: flex-end;
+    margin-top: -70px; /* coloca os elementos um pouco acima do footer */
 }
 .slogan {
     font-family: 'Great Vibes', cursive;
-    font-style: normal;
-    font-size: 40px;
+    font-size: 4vw;
     color: #00a8f3;
-    text-shadow: 3px 3px 1px rgba(0, 0, 0, 1);
-    -webkit-text-stroke: 1px #000000;
-    margin-bottom: 30px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
+    margin-bottom: 1%;
 }
-.divisor{
-    border: 1px;
-    height: 1px;
-    color: black;
-    display: block;
-}
-.titulo{
-    font-family: 'Apple Chancery', cursive;
-    font-style: italic;
-    font-size: 35px;
-}
-.texto{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-}
-.botao{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-weight: bold;
-    font-size: 18px;
-    border-radius: 10px;
+.form {
+    width: 350px;
+    margin: 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
     padding: 10px;
-    border: 2px solid #000000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+.form .input {
+    font-family: 'Great Vibes', cursive;
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    margin-bottom: 10px;
+}
+.form .botoes {
+    display: flex;
+    width: 100%;
+}
+.form .botao {
+    font-family: 'Great Vibes', cursive;
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
+    background-color: #00a8f3;
+    border-radius: 5px;
+    color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s ease;
+    width: 100%;
+    margin-bottom: 0;
+}
+.form .botao:hover {
+    background-color: #00709b;
+}
+footer {
+    background-color: #333; /* Cor de fundo do footer */
+    color: white; /* Cor do texto no footer */
+    text-align: center; /* Alinhamento centralizado do texto */
+    width: 100%; /* Largura total */
+    position: fixed; /* Fixa o elemento na posição especificada */
+    bottom: 0; /* Fixa o footer no rodapé da página */
 }
