--- a/usuarios/templates/home.html
+++ b/usuarios/templates/home.html
@@ -1,23 +1,19 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block 'cabecalho' %}
-    <link rel="stylesheet" href="{% static 'usuarios/css/home.css'%}">
-{% endblock %}
+{% extends 'base.html' %}{% load static %}
+{% block 'cabecalho' %} <link rel="stylesheet" href="{% static 'usuarios/css/home.css'%}"> {% endblock %}
+
 {% block 'conteudo' %}
-    <body class="body">
-        <div class="container">
-            <h1 class="slogan">Feito para quem ama os animais</h1>
-            {% if messages %}
-                {% for message in messages %}
-                    <section class="alert {{message.tags}}">
-                        {{message}}
-                    </section>
-                {% endfor %}
-            {% endif %}
-            <form class="input-group" action="{% url '/' %}" method="POST">{% csrf_token %}
-                <input class="texto" type="text" name="login" id="login" placeholder="Entre com o seu login" required autofocus>
-                <input class="botao" type="submit" value="Entrar">
-            </form>
-        </div>
-    </body>
+    <div class="container">
+        <p class="slogan">Feito para quem ama os animais</p>
+        {% if messages %}
+            {% for message in messages %}
+                <section class="alert {{message.tags}}">
+                    {{message}}
+                </section>
+            {% endfor %}
+        {% endif %}
+        <form class="form" action="{% url '/' %}" method="POST">{% csrf_token %}
+            <input class="input" type="text" name="login" id="login" placeholder="Entre com o seu login" required autofocus>
+            <input class="botao" type="submit" value="Entrar">
+        </form>
+    </div>
 {% endblock 'conteudo' %}
